Archive2/b9/cbe920d77aa81b/output
main.cpp:15:9: error: use of undeclared identifier 'f'
        f();
        ^
1 error generated.
